# zotero-arxiv-daily

./: README.md  pyproject.toml
.github/: copilot-instructions.md  keep-alive.txt
.github/workflows/: ci.yml
config/: base.yaml
src/zotero_arxiv_daily/: protocol.py  utils.py
src/zotero_arxiv_daily/reranker/: api.py  local.py
src/zotero_arxiv_daily/retriever/: arxiv_retriever.py  base.py
tests/: test_email.py  test_llm.py  test_utils.py
tests/reranker/: test_api_reranker.py
